# driftguard

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  driftguard.toml
.github/ISSUE_TEMPLATE/: pilot-feedback.yml
.github/workflows/: driftguard-pr-comment.yml  driftguard.yml  quality.yml  release.yml
benches/: env_scan.rs
docs/: demo.cast  portfolio-case-study.md
examples/broken-ai-app/: README.md  driftguard.toml
examples/broken-ai-app/src/: client.ts
examples/broken-ai-app/src/prompts/: router.md
examples/broken-ai-app/tests/golden/router/: case_01.json
examples/fixed-ai-app/: .env.example  README.md
examples/fixed-ai-app/schemas/: router.schema.json
examples/fixed-ai-app/tests/golden/router/: case_01.json
scripts/: demo.ps1  demo.sh
src/: config.rs  doctor.rs  env_scan.rs  git.rs  lib.rs  main.rs  prompt.rs  report.rs
src/backend/: client.ts
src/prompts/: router.md
tests/: cli.rs
tests/golden/router/: case_04.json
