[package]
name = "driftguard"
version = "0.2.0"
edition = "2021"
authors = ["sid <sid@driftguard.com>"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1.10"
walkdir = "2.4"
jsonschema = "0.18"
glob = "0.3"

[dev-dependencies]
tempfile = "3"
