[package]
name = "driftguard-cli"
version = "0.2.0"
edition = "2021"
authors = ["sid <sid@driftguard.com>"]
description = "Local-first CI guard for environment drift and AI prompt output contracts."
license = "MIT"
repository = "https://github.com/sidsri14/driftguard"
homepage = "https://github.com/sidsri14/driftguard"
readme = "README.md"
keywords = ["ci", "env", "llm", "schema", "rust"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "driftguard"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1.10"
walkdir = "2.4"
jsonschema = "0.18"
glob = "0.3"

[dev-dependencies]
tempfile = "3"
